configurando swagger